develop: create auth component for website authentication and authorization

--- a/src/index.css
+++ b/src/index.css
@@ -179,5 +179,7 @@ table td {
   padding: 1rem 1rem;
   color: rgb(var(--color-secondary-600));
 }
-
+label{
+  display: block;
+}
 /*  react tag input */
